tests/NormalTests/paczka1/small_fuzzy/81959050.err
Error in line 5: HF5jZA A64 21,5
Error in line 4: KIrUUCj3SD A64 86,2
